--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -7,7 +7,6 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNPn+hAPK4+W8LtbSS2jbxa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -400,7 +399,7 @@
         "outputId": "495745f4-f67d-401f-c879-44ecd297e9be"
       },
       "source": [
-        "#@title Imports and Utils { display-mode: \"both\" }\n",
+        "#@title Imports and Utils { display-mode: \"form\" }\n",
         "\n",
         "%matplotlib inline\n",
         "%config InlineBackend.figure_format = 'svg'\n",
@@ -438,7 +437,7 @@
         "    plt.tight_layout()\n",
         "    plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +483,7 @@
         "    path = url.split('/')[-1]\n",
         "    urllib.request.urlretrieve(url, path)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +521,7 @@
         "\n",
         "print(f'Loaded {pretrained_model} successfully')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,7 +585,7 @@
         "# show results\n",
         "compare_sr_with_original(img_lq, img_hq)     "
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -644,7 +643,7 @@
         "# show results\n",
         "compare_sr_with_original(img_lq, img_hq)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
